--- a/EgitimPlatformuAI/CustomViews/CustomNameContainerView.xib
+++ b/EgitimPlatformuAI/CustomViews/CustomNameContainerView.xib
@@ -8,33 +8,60 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomNameContainer" customModule="EgitimPlatformuAI" customModuleProvider="target"/>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomNameContainer" customModule="EgitimPlatformuAI" customModuleProvider="target">
+            <connections>
+                <outlet property="imageView" destination="L5M-bK-GFP" id="JmQ-4A-9SH"/>
+                <outlet property="nameLabel" destination="4rN-vp-yWD" id="lTU-U0-lLr"/>
+                <outlet property="statusLabel" destination="SrX-Fw-tSl" id="0Y8-gw-4fb"/>
+            </connections>
+        </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="393" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="393" height="80"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L5M-bK-GFP">
-                    <rect key="frame" x="16" y="50" width="100" height="100"/>
+                    <rect key="frame" x="20" y="20" width="40" height="40"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="100" id="kaf-lA-vsL"/>
-                        <constraint firstAttribute="width" constant="100" id="zQY-53-O0n"/>
+                        <constraint firstAttribute="width" constant="40" id="3NK-Of-ukf"/>
+                        <constraint firstAttribute="height" constant="40" id="CeC-NE-WAh"/>
                     </constraints>
                 </imageView>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="pTR-6V-eTq">
-                    <rect key="frame" x="165" y="25" width="220" height="150"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="pTR-6V-eTq">
+                    <rect key="frame" x="70" y="15" width="323" height="50"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95m-fs-raK">
+                            <rect key="frame" x="0.0" y="0.0" width="323" height="16.666666666666668"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4rN-vp-yWD">
+                            <rect key="frame" x="0.0" y="16.666666666666664" width="323" height="16.666666666666664"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SrX-Fw-tSl">
+                            <rect key="frame" x="0.0" y="33.333333333333336" width="323" height="16.666666666666664"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                            <color key="textColor" systemColor="systemGreenColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="150" id="2kR-CU-ufP"/>
-                        <constraint firstAttribute="width" constant="220" id="Y50-lG-0Ci"/>
+                        <constraint firstAttribute="height" constant="50" id="eLo-1j-dJf"/>
                     </constraints>
                 </stackView>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="pTR-6V-eTq" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="5mH-aG-GC0"/>
-                <constraint firstAttribute="trailing" secondItem="pTR-6V-eTq" secondAttribute="trailing" constant="8" id="a3X-JT-8eh"/>
-                <constraint firstItem="L5M-bK-GFP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="frx-pH-vUS"/>
-                <constraint firstItem="L5M-bK-GFP" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="gum-ir-ThH"/>
+                <constraint firstAttribute="trailing" secondItem="pTR-6V-eTq" secondAttribute="trailing" id="09V-Ga-lEA"/>
+                <constraint firstItem="pTR-6V-eTq" firstAttribute="leading" secondItem="L5M-bK-GFP" secondAttribute="trailing" constant="10" id="B3m-fI-jcG"/>
+                <constraint firstItem="L5M-bK-GFP" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="FuE-gV-LLc"/>
+                <constraint firstItem="L5M-bK-GFP" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="Grw-i1-msW"/>
+                <constraint firstItem="pTR-6V-eTq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="15" id="Hwx-Ye-WBZ"/>
+                <constraint firstAttribute="bottom" secondItem="pTR-6V-eTq" secondAttribute="bottom" constant="15" id="cAd-fW-jg5"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="101.5267175572519" y="19.718309859154932"/>
@@ -141,6 +168,9 @@
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
