--- a/EgitimPlatformuAI/Views/MainScreen/Base.lproj/MainScreen.storyboard
+++ b/EgitimPlatformuAI/Views/MainScreen/Base.lproj/MainScreen.storyboard
@@ -38,7 +38,21 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-56" y="4"/>
+            <point key="canvasLocation" x="-166" y="35"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="cVR-V5-lrc">
+            <objects>
+                <viewController id="T0q-qA-Cdn" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qUS-4U-d2K">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WQP-Gv-dKn" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-339" y="-418"/>
         </scene>
     </scenes>
     <resources>
